# kitty-lang

./: .gitignore  README.md  kitty-lang.cabal
src/: Main.hs
src/Interpreter/: Interpreter.hs  Stack.hs
src/Parser/: Grammar.hs  Parser.hs
